<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emergency_title"
            android:id="@+id/emergency"
            android:layout_margin="10dp"/>
    <Spinner
            android:layout_toEndOf="@id/emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emergencySpinner"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_below="@id/emergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location_title"
            android:id="@+id/location"
            android:layout_margin="10dp"/>
    <EditText
            android:layout_below="@id/location"
            android:layout_width="fill_parent"
            android:maxLength="40"
            android:hint="@string/location_hint"
            android:layout_height="wrap_content"
            android:id="@+id/location_box"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_below="@id/location_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/severity_title"
            android:id="@+id/severity"
            android:layout_margin="10dp"/>
    <Spinner
            android:layout_toEndOf="@id/severity"
            android:layout_below="@id/location_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/severitySpinner"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_below="@id/severity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/special_instructions_title"
            android:id="@+id/special_instructions"
            android:layout_margin="10dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:hint="@string/special_instructions_hint"
            android:maxLength="40"
            android:layout_height="wrap_content"
            android:id="@+id/special_instructions_box"
            android:layout_below="@+id/special_instructions"
            android:layout_margin="10dp"/>
    <Button
            android:id="@+id/submitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/submit_button"
            android:layout_margin="10dp"/>
</RelativeLayout>